--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="button">Button</string>
     <string name="due_date">Due Date</string>
     <string name="deck_title">Deck Title</string>
+    <string name="title_activity_study_staging_area">StudyStagingArea</string>
 </resources>
