create calendar view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="deck_title">Deck Title</string>
     <string name="title_activity_study_staging_area">StudyStagingArea</string>
     <string name="return_to_home">Return to Home</string>
+    <string name="title_activity_calendar_view">CalendarView</string>
 </resources>
